--- a/style/style.css
+++ b/style/style.css
@@ -1,10 +1,10 @@
 body {
-	background-color:  rgb(26, 81, 129);
+	background-color:  rgb(240, 247, 247);
 	font-family: 'Dancing Script', cursive;
 	color: white;
 }
 .mainheader {
-	color: white;
+	color: rgb(171, 179, 179);
 	position:  absolute;
 	margin-top: 10px;
 	margin-left: 20px;
@@ -24,13 +24,13 @@ body {
 	font-style:italic;
 }
 #tagline {
-	color: white;
+	color: rgb(171, 179, 179);
 	position: absolute;
 	margin-top: 60px;
 	margin-left: 680px;
 	font-size: 50px;
 	z-index: 8;
-	text-shadow: 0 2px #2db0e4;
+	text-shadow: 0 2px rgb(127, 133, 133);
 	opacity: 0;
 }
 #tagline.on {
@@ -42,7 +42,7 @@ body {
 	text-align: center;
 	font-size: 30px;
 	text-decoration: none;
-	text-shadow:1px 1px black;
+	text-shadow:1px 1px rgba(0,0,0,0.3);
 }
 #startupcircle {
 	background-color: rgb(157, 51, 29);
@@ -156,7 +156,7 @@ ul {
 	list-style-type: none;
 }
 .nav .startup, .legal, .fashion, .media, .social {
-	color:  white;
+	color:  rgb(171, 179, 179);
 	text-decoration: none;
 	display:  block;
 	height: 40px;
@@ -183,6 +183,7 @@ ul {
 	border-radius: 50%;
 	text-align:center;
 	text-shadow:1px 1px black;
+	color:white;
 }
 #home img {
 	background-color: white;
@@ -557,7 +558,7 @@ ul {
 .columns{
 	float: left;
 	width: 30%;
-	color: white;
+	color: rgb(171, 179, 179);
 	text-align: center;
 	font-size: 30px;
 	margin-top: 0px;
@@ -591,7 +592,7 @@ ul {
 	-o-box-sizing: border-box;
 
 	content: "\25b6";
-	color:white;
+	color:rgb(171, 179, 179);
 	display: block;
 	width: 70px;
 	height: 50px;
