--- a/style/style.css
+++ b/style/style.css
@@ -253,7 +253,11 @@ ul {
   height: 42px;
   width:  42px;
 }
-@media (max-width: 320px) {
+@media only screen and (max-width: 480px) {
+	body {
+		width:320px;
+		background: green;
+	}
 	.mainheader {
 		font-size: 16px;
 	}
