--- a/style/style.css
+++ b/style/style.css
@@ -253,7 +253,7 @@ ul {
   height: 42px;
   width:  42px;
 }
-@media only screen and (max-width: 480px) {
+@media only screen and (min-device-width: 320px) and (max-device-width: 568px) {
 	body {
 		width:320px;
 	}
